--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-tab-view": "^4.0.10",
-    "react-native-pager-view": "6.5.1",
-    "react-native-gesture-handler": "~2.20.2"
+    "react-native-svg": "^15.11.2",
+    "react-native-tab-view": "^4.0.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
 }
