--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
-    "react-native-tab-view": "^4.0.10"
+    "react-native-tab-view": "^4.0.10",
+    "expo-font": "~13.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
