--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
     "expo": "~52.0.43",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
+    "group": "^1.0.2",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
@@ -23,7 +25,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "react-native-tab-view": "^4.0.10",
-    "expo-font": "~13.0.4"
+    "react-transition": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
