--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "6.5.1",
-    "react-native-reanimated": "^3.17.5",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "react-native-tab-view": "^4.0.10",
     "react-transition": "^1.0.3"
   },
